nginx-ingress/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1-container
        image: nginx:latest
        ports:
        - containerPort: 8080

# ---

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: app2-deployment
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: app2
#   template:
#     metadata:
#       labels:
#         app: app2
#     spec:
#       containers:
#       - name: app2-container
#         image: node:latest
#         ports:
#         - containerPort: 4200
