nginx-ingress/nginx-services.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: service1
# spec:
#   selector:
#     app: service1
#   ports:
#   - protocol: TCP
#     port: 4200
#     targetPort: 4200

# ---

apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: service2
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
